refactor(test): one home for the test helpers, one table for the malformed vectors (#88)
`bytes(int...)` was declared identically in sixteen test classes, `errorOf` /
`errorOfChunked` in four, and `verdict(byte[], Visitor, int)` plus its `CHUNKS`
constant were byte-identical twins in the two fixlen suites. A helper that is
cheap to re-declare makes a case cheap to re-assert, and that is exactly what
had happened: `02 82 80 80 80 40` (fixlen length above max) was asserted
byte-at-a-time in StateMachineCoverageTest and again in DecoderPathCoverageTest,
and on the fast path in DecoderErrorsTest, with the same triangle repeating for
the reserved fixlen sub-type, the fp32/fp64 wrong length, the dangling sequence
end and MAX_DEPTH.

The helpers now live once, next to RecordingVisitor:

* `common/Wire` — `bytes(int...)`, `concat(byte[]...)`.
* `common/Decode` — `errorOf`, `errorOfChunked`, `verdict` and `CHUNKS`.

The malformed-input cases are one table. DecoderErrorsTest holds every rejection
vector as a `(name, bytes, expected)` row and drives *each* row through both
decode surfaces — one feed and byte-at-a-time — which is what the three suites
were collectively doing under three copies of the harness. DecoderPathCoverageTest
is gone into it, StateMachineCoverageTest keeps the rich message it feeds at chunk
sizes 1/2/5/13 (genuinely distinct) plus its zero-count control, and IStreamTest's
duplicated malformed cases point at the table instead.

No (vector, surface) pair was lost: every vector the three suites asserted is a
row, and rows that were previously asserted on one surface only are now asserted
on both. JaCoCo is unchanged at 99.09% instruction / 97.03% branch, before and
after.

TestHelpersWrittenOnceTest is the regression guard, in the style of
NoDeadCodeTest and DecodeRuleWrittenOnceTest: it scans the test sources and fails
if any class outside `common/` re-declares a shared helper (32 such declarations
on the parent commit), checks the shared copies really are